AM_CPPFLAGS = -DBOOST_TEST_DYN_LINK -W -Wall -Wno-sign-compare -I$(top_srcdir) -I$(top_srcdir)/mteval -I$(top_srcdir)/utils -I$(top_srcdir)/klm -I$(top_srcdir)/decoder

lib_LTLIBRARIES = libff_example.la
libff_example_la_SOURCES = ff_example.cc
libff_example_la_LDFLAGS = -version-info 1:0:0 -module
